# elcuestionario

./: .editorconfig  .gitignore  .htaccess  .landscape.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  README.txt  elcuestionario.py  index.py  requirements-test.txt  requirements.txt  runserver.py  setup.cfg  setup.py  style.css  survey.cgi  survey.html  survey.kid  survey.py  test_elcuestionario.py  test_survey.py  tox.ini
data/: example.json  example.xml
elcuestionario/: __init__.py  evaluation.py  loader.py  models.py  questionnaire.py  userinput.py
elcuestionario/data/: example.json  example.xml
elcuestionario/static/: style.css
elcuestionario/templates/: layout.html  questionnaire.html  result.html
src/elcuestionario/: __init__.py  app.py  cli.py  evaluation.py  questionnaire.py  userinput.py
src/elcuestionario/static/: style.css
src/elcuestionario/templates/: questionnaire.html
static/: style.css
templates/: layout.html  questionnaire.html  result.html  survey.html
tests/: __init__.py  helpers.py  test_app.py  test_evaluation.py  test_evaluator.py  test_loader.py  test_userinput.py
