[metadata]
name = El Cuestionario
version = attr: elcuestionario.VERSION
url = https://homework.nwsnet.de/releases/8909/#el-cuestionario
author = Jochen Kupperschmidt
author_email = homework@nwsnet.de
classifiers =
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Other Audience
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Games/Entertainment
license = GPLv2
license_file = LICENSE
description = A tiny web application to display and evaluate single-page questionnaires
long_description = file: README.rst
keywords = questionnaire
platforms = any

[options]
zip_safe = False
install_requires =
    Flask==1.1.2
    Werkzeug==1.0.1
python_requires = >=3.7
packages = find:
package_dir = =src

[options.entry_points]
console_scripts =
    elcuestionario = elcuestionario.cli:main

[options.packages.find]
where = src
